# ChangeLog for eclass directory
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Sep 2012; Martin Väth <martin@mvath.de>
  mv_mozextension: Use slot dependencies; requires at least EAPI=5
  monotone: Remove useless DESCRIPTION

  26 Aug 2012; Martin Väth <martin@mvath.de>
  Rename IUSE={copy,symlink}_extensions to {copy,symlink}-extensions to avoid
  possible collision with USE_EXPAND

  10 Jun 2012; Martin Väth <martin@mvath.de>
  Remove support for icecat. Fix headers to make repoman happy.

  12 May 2012; Martin Väth <martin@mvath.de>
  base->eutils

  12 May 2012; Martin Väth <martin@mvath.de>
  Created ChangeLog
