@@ -2,6 +2,9 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  22 Sep 2012; Martin Väth <martin@mvath.de>
+  Use AUTHOR tag. Use $ECLASS for message
+
   21 Sep 2012; Martin Väth <martin@mvath.de>
   mv_mozextension: Use slot dependencies; requires at least EAPI=5
   monotone: Remove useless DESCRIPTION
